--- a/package.json
+++ b/package.json
@@ -8,13 +8,17 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
     "airtable": "^0.11.1",
     "next": "11.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-table": "^7.7.0"
   },
   "devDependencies": {
     "@types/react": "17.0.17",
+    "@types/react-table": "^7.7.2",
     "typescript": "4.3.5"
   }
 }
