--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "next": "11.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-loader-spinner": "^4.0.0",
+    "react-query": "^3.19.6",
     "react-table": "^7.7.0"
   },
   "devDependencies": {
