--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
     "airtable": "^0.11.1",
+    "match-sorter": "^6.3.0",
     "next": "11.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
