--- a/package.json
+++ b/package.json
@@ -20,8 +20,18 @@
     "react-table": "^7.7.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.0.0",
+    "@babel/preset-env": "^7.15.6",
+    "@babel/preset-typescript": "^7.15.0",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.1.0",
+    "@types/jest": "^27.0.2",
     "@types/react": "17.0.17",
     "@types/react-table": "^7.7.2",
+    "babel-jest": "^27.2.1",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^27.2.1",
+    "react-test-renderer": "^17.0.2",
     "typescript": "4.3.5"
   }
 }
