--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-dom": "17.0.2",
     "react-loader-spinner": "^4.0.0",
     "react-query": "^3.19.6",
-    "react-table": "^7.7.0"
+    "react-table": "^7.7.0",
+    "react-trello": "^2.2.11"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
