--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "17.0.2",
     "react-loader-spinner": "^4.0.0",
     "react-query": "^3.19.6",
+    "react-select": "^5.2.2",
     "react-table": "^7.7.0",
     "react-trello": "^2.2.11"
   },
