--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
+    "@nextui-org/react": "^1.0.2-alpha.2",
     "@prisma/client": "^3.1.1",
     "airtable": "^0.11.1",
     "match-sorter": "^6.3.0",
