--- a/package.json
+++ b/package.json
@@ -14,18 +14,20 @@
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
     "@nextui-org/react": "^1.0.2-alpha.2",
-    "@prisma/client": "^3.1.1",
+    "@prisma/client": "^3.8.1",
     "airtable": "^0.11.1",
     "match-sorter": "^6.3.0",
     "next": "11.1.0",
-    "prisma": "3.1.1",
+    "prisma": "^3.8.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-loader-spinner": "^4.0.0",
     "react-query": "^3.19.6",
     "react-select": "^5.2.2",
     "react-table": "^7.7.0",
-    "react-trello": "^2.2.11"
+    "react-toastify": "^8.1.0",
+    "react-trello": "^2.2.11",
+    "wretch": "^1.7.7"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
