--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "prisma": "^3.8.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-iconly": "^2.2.5",
     "react-loader-spinner": "^4.0.0",
     "react-query": "^3.19.6",
     "react-select": "^5.2.2",
