--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@prisma/client": "^3.8.1",
     "airtable": "^0.11.1",
     "autosize": "^5.0.1",
+    "date-fns": "^2.28.0",
+    "lodash": "^4.17.21",
     "match-sorter": "^6.3.0",
     "next": "11.1.0",
     "prisma": "^3.8.1",
@@ -40,6 +42,7 @@
     "@testing-library/react": "^12.1.0",
     "@types/autosize": "^4.0.1",
     "@types/jest": "^27.0.2",
+    "@types/lodash": "^4.14.178",
     "@types/react": "17.0.17",
     "@types/react-table": "^7.7.2",
     "babel-jest": "^27.2.1",
