--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
-    "@nextui-org/react": "^1.0.2-alpha.2",
+    "@nextui-org/react": "^1.0.0-beta.6",
     "@prisma/client": "^3.8.1",
     "airtable": "^0.11.1",
     "autosize": "^5.0.1",
