--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.3.0",
     "@nextui-org/react": "^1.0.0-beta.6",
     "@prisma/client": "^3.8.1",
+    "@sentry/nextjs": "^6.19.7",
     "airtable": "^0.11.1",
     "autosize": "^5.0.1",
     "date-fns": "^2.28.0",
