--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "prisma": "^3.8.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.33.0",
     "react-iconly": "^2.2.5",
     "react-loader-spinner": "^4.0.0",
     "react-query": "^3.19.6",
