--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-query": "^3.19.6",
     "react-select": "^5.2.2",
     "react-table": "^7.7.0",
+    "react-table-sticky": "^1.1.3",
     "react-toastify": "^8.1.0",
     "react-trello": "^2.2.11",
     "recharts": "^2.1.8",
