--- a/.env.template
+++ b/.env.template
@@ -9,3 +9,6 @@
 DATABASE_URL="postgresql://postgres:{your_postgres_password}@localhost/estimator"
 
 NEXT_PUBLIC_API_URL= http://localhost:3000/api
+GOOGLE_CLIENT_ID=""
+GOOGLE_CLIENT_SECRET=""
+NEXTAUTH_SECRET=""
