--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
   "dependencies": {
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
+    "@next-auth/prisma-adapter": "^1.0.5",
     "@nextui-org/react": "^1.0.0-beta.6",
-    "@prisma/client": "^3.8.1",
+    "@prisma/client": "^4.11.0",
     "@sentry/nextjs": "^6.19.7",
     "airtable": "^0.11.1",
     "autosize": "^5.0.1",
@@ -22,6 +23,7 @@
     "lodash": "^4.17.21",
     "match-sorter": "^6.3.0",
     "next": "11.1.0",
+    "next-auth": "^4.20.1",
     "prisma": "^3.8.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
